css/styles.css
body {
  background-color: #fafafa99;
}
.container {
  border:1px solid #dfdfdf;
  border-top: 0px;
  background-color: #fbfbfb;
  box-shadow: 0 5px 15px rgb(0 0 0 / 55%);
}
.card {
  box-shadow: 0 5px 15px rgb(0 0 0 / 5%);
}
.jumbotron {
  background-color: #d1ecf1;
  border: 1px solid #afc2c6c9;
  border-top-left-radius: 0%;
  border-top-right-radius: 0%;
  border-top:0px;
  box-shadow: 0 5px 15px rgb(0 0 0 / 5%);
}
.jumbo-header {
  text-align: center;
  max-height: 100px;
}
a, li, p, h3 {
  color: #000;
  font-weight: lighter;
}
ul {
  margin-bottom: 3%;
  padding: 2%;
  padding-left:7%;
  text-align: left;
}

@media (min-width: 768px) {
  #career h3 {
    text-align:left;
  }
}


#headshot-img {
  float: left;
  width: 40%;
  margin-right: 5%;
}

.job-titles {
  font-weight: normal;
}

#career {
  width:100%;
}

#career, #about-me, #projects-main, #links-card, #interests-card {
  padding: 2% 4% 2% 4%;
  margin-bottom: 15px;
  background-color: #ffffff73;
  transition-duration:.25s;
}
#career:hover, #about-me:hover, #projects-main:hover, #links-card:hover, #interests-card:hover {
  transition-duration:.25s;
  background-color: #fff;
}
#career h3 {
  color: #5d5d5d;
  font-weight: lighter;
}
/* @media (min-width: 500px) {
  #career h3 {
    text-align:left;
  }
} */

@media (min-width: 992px) {
  #career h3 {
    text-align:right;
  }
}

@media (max-width: 992px) {
  p {
    font-size:1.3em;
  }
}

#about-me h3 {
  color: #5d5d5d;
  font-weight: lighter;
}

#career h6 {
  color: #5d5d5d;
  text-align: left;
}
.projects-card {
  margin-bottom: 25px;
  padding: 5% 4% 10% 4%;
  background-color: #fcfcfc;
  transition-duration:.25s;
  height:93%;
  text-align: center;
  box-shadow: 0 5px 15px rgb(0 0 0 / 5%);
}
#projects-main h3 {
  color: #5d5d5d;
  font-weight: lighter;
}
.projects-card ul {
  margin-top:0;
  padding-top:0;
  padding-left: 15px;
}
.projects-card h5, h6 {
  text-align: center;
}

.projects-card:hover {
  box-shadow: 0 5px 15px rgb(0 0 0 / 15%);
  text-decoration: none;
  height:96%;
  transition-duration:.25s;
  background-color: #fff;
}
.project-div-link:hover {
  text-decoration: none;
  color:black;
}
.projects-card hr {
  margin-top:0;
  margin-bottom: 10px;
}
.project-card-content {
  margin-left:10px;
  text-align: left;
}

#projects-forward {
  text-align: center;
  padding: 2% 0% 1% 0%;  
  margin-bottom: 25px;
  font-size: 16pt;
}

#interests-card li {
  padding-bottom: 10px;
}
#interests-card h3 {
  color: #5d5d5d;
  font-weight: lighter;
}
#SoundCloud-iframe {
  padding-top:10px;
}

#links-card button {
  background-color: #304483;
  margin: 5px;
  box-shadow: 0 5px 15px rgb(0 0 0 / 5%);
}
#links-card h3 {
  color: #5d5d5d;
  font-weight: lighter;
}
#links-card button:hover {
  background-color: #0062cc;
  box-shadow: 0 5px 15px rgb(0 0 0 / 10%);
}
#links-card a:hover {
  text-decoration: none;
}
@media (max-width: 992px) {
  p, li, ul, ol, footer {
    font-size:24pt;
    font-weight: normal;
  }
  footer {
    font-weight: lighter;
  }
  h5, h6 {
    margin-bottom: 15px;
    font-size:30pt;
  }
  h6 {
    margin-top:25px;
  }
  .container, .body {
    margin-left:5%;
    margin-right:5%;
    min-width: 90%;
  }
  .projects-card {
    border: 1px solid #808080;
  }
}

